<resources>
    <string name="app_name">Quiz App</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="question">Question will appear here</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="submit">Submit</string>
    <string name="your_score">Your Score: 0/0</string>
    <string name="back">Back to Home</string>

</resources>